# doc_faq

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  rag_chain.py  rate_limit.py  retriever.py  splitter.py
.streamlit/: secrets.example.toml
tests/: conftest.py  test_UI.py  test_rate_limit.py  test_split.py
